@@ -2,7 +2,7 @@
 <!-- Copyright 2014 Jean Brefort <jean.brefort@normalesup.org> -->
 <application>
  <id type="desktop">gchemtable.desktop</id>
- <metadata_licence>CC0-1.0</metadata_licence>
+ <metadata_license>CC0-1.0</metadata_licence>
  <project_license>GPL-3.0 and GFDL-1.3</project_license>
  <name>GChemTable</name>
  <summary>Periodic table of the elements</summary>
