@@ -1,5 +1,13 @@
 ##Text encoding: utf-8
 
+2015-01-09  Jean Bréfort  <jean.brefort@normalesup.org>
+	* programs/3d/gchem3d.appdata.xml.in: fixed typo.
+	* programs/calc/gchemcalc.appdata.xml.in: ditto.
+	* programs/crystal/gcrystal.appdata.xml.in: ditto.
+	* programs/paint/gchempaint.appdata.xml.in: ditto.
+	* programs/spectra/gspectrum.appdata.xml.in: ditto.
+	* programs/table/gchemtable.appdata.xml.in: ditto.
+
 2014-11-04  Jean Bréfort  <jean.brefort@normalesup.org>
 	* libs/gcp/application.cc: clean Tools code from.
 	* libs/gcp/tools.cc: ditto.
